# persona-mcp-local

./: .gitignore  README.md  SECURITY_REVIEW.md  pyproject.toml
fixtures/: inquiries.json
src/delegate_scope_local/: cli.py  crypto.py  dashboard.py  fixtures.py  issuer.py  models.py  runner.py
src/persona_mcp_local/: __init__.py  cli.py  crypto.py  dashboard.py  fixtures.py  issuer.py  models.py  runner.py
tests/: test_workflow.py
