[project]
name = "delegate-scope-local"
version = "0.1.0"
description = "Local MCP-style agent identity delegation reference."
readme = "README.md"
authors = [
    { name = "Tarun Aditya Kusupati" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.2",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
delegate-scope-local = "delegate_scope_local.cli:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
